# MPITG

./: README.md  TODO.md  pyproject.toml  requirments.txt
mpitg/: mpitg.py
mpitg/src/almanac/: constants.py  ephemeris.py
mpitg/src/calc/: izzo.py  kepler.py  lambert.py
mpitg/src/conic/: ballistic.py  ballistic2.py  ga.py
mpitg/src/math/: kepler.py
mpitg/src/propagator/: n_body_integrator.py
mpitg/src/solver/: kepler.py  lambert.py
mpitg/src/viz/: launch_window.py
